--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 
   <body onload="empiezaJuego();">
     <p>DungueonJS</p>
+    <canvas id="pantallaJuego" style="border:4px solid  #000000 "> </canvas>
   </body>
 </html>
